src/test/deca/syntax/invalid/resultats/test18_instr_bool-synt.res
./src/test/deca/syntax/invalid/test18_instr_bool.deca:15:18: token recognition error at: '| '
